--- a/swissArmyKnife-host/pom.xml
+++ b/swissArmyKnife-host/pom.xml
@@ -70,6 +70,17 @@
           <version>0.0.1-SNAPSHOT</version>
       </dependency>
 
+      <dependency>
+          <groupId>paradigma0621</groupId>
+          <artifactId>swissArmyKnife-comparator</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+      </dependency>
+      
+      <dependency>
+          <groupId>paradigma0621</groupId>
+          <artifactId>swissArmyKnife-scratch</artifactId>
+          <version>0.0.1-SNAPSHOT</version>
+      </dependency>
   </dependencies>
 
   <build>
